Several historical observations

--- a/2020-12-29-dissecting-python.org
+++ b/2020-12-29-dissecting-python.org
@@ -24,6 +24,16 @@ tags: [book, template]
 
 *** TODO Thoughts
 
+**** Retrospecive analysis
+
+     - Coding in a modern sense of it was born in 40s. It was
+       something in the middle of lore and mistery;
+     - The idea of /compiler/ as a middleware between humans and
+       machines was on the tip of the thong but implemented by Grace
+       Hopper titanic efforts only a decade later;
+     - The bedrock for /high-level/ programming languages;
+     - Unit-testing as a /separate approach/ in programming was
+       introduced in 90s;
 **** __main__ in thef footer
 
      as a sign of uncompetence - run a =Python= program in your
