--- a/2020-12-29-dissecting-python.org
+++ b/2020-12-29-dissecting-python.org
@@ -377,8 +377,28 @@ absolutely autonomous, we got conclusion about a native and natural
 compatibility of humans and testing approach for study.
 
 
-** A dumb testing set (test the test itself)
+* A dumb testing set (test the test itself)                        :noexport:
 
+   #+BEGIN_SRC python :noweb yes :tangle tests/test_00dumb_testing.py :exports none
+     """
+     Lets discover special values and testing methods one by one
+
+     | Method                    | Checks that          |
+     |---------------------------+----------------------+
+     | assertEqual(a, b)         | a == b               |
+     | assertNotEqual(a, b)      | a != b               |
+     | assertTrue(x)             | bool(x) is True      |
+     | assertFalse(x)            | bool(x) is False     |
+     | assertIs(a, b)            | a is b               |
+     | assertIsNot(a, b)         | a is not b           |
+     | assertIsNone(x)           | x is None            |
+     | assertIsNotNone(x)        | x is not None        |
+     | assertIn(a, b)            | a in b               |
+     | assertNotIn(a, b)         | a not in b           |
+     | assertIsInstance(a, b)    | isinstance(a, b)     |
+     | assertNotIsInstance(a, b) | not isinstance(a, b) |
+     """
+   #+END_SRC
 
 ** Testing Python innate constants
 
