--- a/2020-12-29-dissecting-python.org
+++ b/2020-12-29-dissecting-python.org
@@ -415,13 +415,25 @@ compatibility of humans and testing approach for study.
    #+BEGIN_SRC python :session test
      import unittest
 
-     """
-     By its purpose all programming languages should allow the reader to
+     """By its purpose all programming languages should allow the reader to
      understand what exactly this particular text do in a much explicit
      manner. The real state of things requires a literate reader with a huge
      experience exactly in reading programs and comprehension. Noticeable
      that nowadays most programs demand from reader such proficiency that
-     it made it truly readable for the true geeks only.
+     it made them truly readable for the handful of true geeks only.
+
+     Nevertheless, this fact usually omitted by specialists, who spent a
+     huge amount of time reading so overcomplicated texts of programs.
+     Through time, it became a normal if anybody can't grasp an idea out
+     from program's source code on the fly.
+
+     “It is just lack of experience!”: they say usually. You might object
+     by notation that several professionals can't catch the essence out
+     from that text because it poorly written, they answer something like:
+     “It works well enough to be scrutinized much more precisely.”
+
+     Nowadays it is deemed as normal to lack capability to understand
+     source code even for professionals. Naturally it is abnormal.
 
      """
    #+END_SRC
@@ -432,9 +444,10 @@ compatibility of humans and testing approach for study.
    #+BEGIN_SRC python :session test
      class TestLanguageBasemet(unittest.TestCase):
 
-         """
-         Lets discover built-in constants True, False, None and already
-         existing testing methods one by one
+         """The first and foremost taks for testing is to ensure how testing
+         tools work. In our case lets begit from the simplest things ever -
+         lets discover built-in constants True, False, None with already
+         defining testing methods one by one.
 
          | Method                    | Checks that          |
          |---------------------------+----------------------+
@@ -460,11 +473,16 @@ compatibility of humans and testing approach for study.
              self.assertFalse(False)  #
 
          def test_does_none_ever_exist(self):  #
-             self.assertNone(None)  #
+             self.assertIsNone(None)  #
 
          """ Now it became obious that three built-in values are well-defined
-         out of the box.  It is time to compare them against each other
+         out of the box.  It is very time to compare them against each other.
          """
+
+         def test_none_fasle_true_comparison(self):
+             self.assertIsNotNone(True)  # Naturally, niever False
+             self.assertIsNotNone(False) # nor True are not None
+             self.assertFalse(None)  # !! None is a Boolean False
    #+END_SRC
 
    #+RESULTS: true-assertion
